--- a/Main/Main.html
+++ b/Main/Main.html
@@ -20,7 +20,7 @@
 
   .content img {
     display: block;
-    margin-left: 100px; /* gofo 이미지를 좌측으로 100px 이동 */
+    margin-right: 120px; /* 이미지를 좌측으로 100px 이동 */
     position: relative;
   }
 
