--- a/Game_past/Game_past.html
+++ b/Game_past/Game_past.html
@@ -11,16 +11,33 @@
             <img src="assets/background.png" alt="road">
         </div>
         <div id="character">
-            <img src="assets/character.png" alt="" id="character">
+            <img src="assets/character.gif" alt="" id="character">
         </div>
-        <!-- <div id="character_2">
-            <img src="assets/character_2.png" alt="" id="character_2">
-        </div> -->
         <div id="block">
-            <img src="assets/crystal.png" alt="blocks">
+            <img src="assets/fish.png" alt="blocks">
+        </div>
+        <div id = "death1">
+            <img src="assets/death1.png" alt="death1">
+        </div>
+        <div id = "death2">
+            <img src="assets/death2.png" alt="death2">
+        </div>
+        <div id = "death3">
+            <img src="assets/death3.png" alt="death3">
+        </div>
+        <div id = "life1">
+            <img src="assets/life1.png" alt="life1">
+        </div>
+        <div id = "life2">
+            <img src="assets/life2.png" alt="life2">
+        </div>
+        <div id = "life3">
+            <img src="assets/life3.png" alt="life3">
         </div>
         <div id="score">Score <b>00</b></div>
-        <div id="gameOver">Game Over</div>
+        <div id="gameOver">
+            <img src="assets/gameover.png" alt ="gameover">
+        </div>
     </div>
     <script src="js/Game_past.js"></script>    
 </body>
