--- a/Main/Main.html
+++ b/Main/Main.html
@@ -60,7 +60,7 @@
   <div class="content">
     <img src="gofo.png" alt="gofo">
     <p></p>
-    <a href="p2.html">
+    <a href="../Map/Map.html">
       <img src="start.png" alt="start">
     </a>
     <img src="polygon.png" alt="polygon" class="polygon start">
