--- a/Map/Map.html
+++ b/Map/Map.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
   <meta charset="utf-8">
   <title>Map</title>
   <style>
-      body{
-        background-image: url('background.png');
-        background-repeat: no-repeat;
-        background-position: center; 
-        background-size: 80%;
-      }
+    body {
+      height: 100%;
+      margin: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: url("background.png") no-repeat center center fixed;
+      background-size: cover;
+    }
   </style>
 </head>
 
