캐릭터 아파하는 것 수정

--- a/Game_past/Game_past.html
+++ b/Game_past/Game_past.html
@@ -34,6 +34,9 @@
         <div id = "life3">
             <img src="assets/life3.png" alt="life3">
         </div>
+        <div id = "crystalball">
+            <img src="assets/crystalball.png" alt="crystalball">
+        </div>
         <div id="score">Score <b>00</b></div>
         <div id="gameOver">
             <img src="assets/gameover.png" alt ="gameover">
