--- a/Main/Main.html
+++ b/Main/Main.html
@@ -20,34 +20,18 @@
 
   .content img {
     display: block;
-    margin-right: 120px; /* 이미지를 좌측으로 100px 이동 */
+    margin-right: 120px;
     position: relative;
   }
 
   .content .polygon {
+    width: 50px;
+    height: 50px;
+    background: url("polygon.png") no-repeat center center;
     display: none;
     position: absolute;
-    left: calc(50% - 100px); /* polygon 이미지의 가로 중앙 위치에서 100px 좌측으로 이동 */
+    left: calc(30% - 120px);
     transform: translateX(-50%);
-  }
-
-  .content a:hover + .polygon {
-    display: inline-block;
-  }
-
-  .content a:hover + .polygon.start {
-    left: calc(400px - 100px); /* start 이미지의 가로 위치에서 100px 좌측으로 이동 */
-    top: 365px; /* start 이미지의 위로 100px 위치 */
-  }
-
-  .content a:hover + .polygon.exit {
-    left: calc(400px - 100px); /* exit 이미지의 가로 위치에서 100px 좌측으로 이동 */
-    top: 445px; /* exit 이미지의 위로 200px 위치 */
-  }
-
-  .content a:hover + .polygon.menu {
-    left: calc(400px - 100px); /* menu 이미지의 가로 위치에서 100px 좌측으로 이동 */
-    top: 515px; /* menu 이미지의 위로 300px 위치 */
   }
 
   .content p {
@@ -63,18 +47,61 @@
     <a href="p2.html">
       <img src="start.png" alt="start">
     </a>
-    <img src="polygon.png" alt="polygon" class="polygon start">
+    <div class="polygon start"></div>
     <p></p>
     <a href="p2.html">
       <img src="exit.png" alt="exit">
     </a>
-    <img src="polygon.png" alt="polygon" class="polygon exit">
+    <div class="polygon exit"></div>
     <p></p>
     <a href="p2.html">
       <img src="menu.png" alt="menu">
     </a>
-    <img src="polygon.png" alt="polygon" class="polygon menu">
+    <div class="polygon menu"></div>
     <p></p>
   </div>
+
+  <script>
+    var polygonElements = document.querySelectorAll('.polygon');
+    var arrow_num = 0;
+
+    function updatePolygonPosition() {
+      var yOffset = arrow_num * 75; // Adjust the y-coordinate offset based on arrow_num
+      polygonElements.forEach(polygon => {
+        polygon.style.display = 'none';
+      });
+      polygonElements[arrow_num].style.display = 'inline-block';
+      polygonElements[arrow_num].style.top = `${365 + yOffset}px`;
+    }
+
+    document.addEventListener('keydown', function (e) {
+      if (e.code === 'ArrowDown') {
+        if (arrow_num < 2) {
+          arrow_num++;
+          updatePolygonPosition();
+          console.log(arrow_num);
+        }
+      } else if (e.code === 'ArrowUp') {
+        if (arrow_num > 0) {
+          arrow_num--;
+          updatePolygonPosition();
+          console.log(arrow_num);
+        }
+      } else if (e.code === 'Enter') {
+        if (arrow_num == 0) {
+          console.log('0입니다')
+          location.href = 'p2.html'; // Changed to 'p2.html'
+        } else if (arrow_num == 1) {
+          console.log('1입니다')
+          location.href = 'p2.html'; // Changed to 'p2.html'
+        } else if (arrow_num == 2) {
+          console.log('2입니다')
+          location.href = 'p2.html'; // Changed to 'p2.html'
+        }
+      }
+    });
+
+    updatePolygonPosition(); // Call the function initially to set the initial position
+  </script>
 </body>
 </html>
