past 배경 수정등등

--- a/Main/Main.html
+++ b/Main/Main.html
@@ -90,7 +90,7 @@
       } else if (e.code === 'Enter') {
         if (arrow_num == 0) {
           console.log('0입니다')
-          location.href = 'p2.html'; // Changed to 'p2.html'
+          location.href = '../Map/Map.html'; // Changed to 'p2.html'
         } else if (arrow_num == 1) {
           console.log('1입니다')
           location.href = 'p2.html'; // Changed to 'p2.html'
