--- a/Game_past/Game_past.html
+++ b/Game_past/Game_past.html
@@ -7,6 +7,12 @@
 </head>
 <body>
     <div id="container">
+        <div id="monster">
+            <img src="assets/monster.png" alt="monster">
+        </div>
+        <div id="exclamation">
+            <img src="assets/exclamation.png" alt="exclamation">
+        </div>
         <div id="road">
             <img src="assets/background.png" alt="road">
         </div>
@@ -37,7 +43,7 @@
         <div id = "crystalball">
             <img src="assets/crystalball.png" alt="crystalball">
         </div>
-        <div id="score">Score <b>00</b></div>
+        <div id="score">Score <b>0</b></div>
         <div id="gameOver">
             <img src="assets/gameover.png" alt ="gameover">
         </div>
