--- a/Game_past/Game_past.html
+++ b/Game_past/Game_past.html
@@ -7,6 +7,12 @@
 </head>
 <body>
     <div id="container">
+        <div id = "gameclear">
+            <img src="assets/gameclear.png" alt="gameclear">
+        </div>
+        <div id = "stage_success">
+            <img src="assets/stage_success.png" alt="stage_success">
+        </div>
         <div id="monster">
             <img src="assets/monster.png" alt="monster">
         </div>
