--- a/Game_past/Game_past.html
+++ b/Game_past/Game_past.html
@@ -52,6 +52,9 @@
         <div id="gameOver">
             <img src="assets/gameover.png" alt="gameover">
         </div>
+        <div id="plus">
+            <img src="assets/plus.png" alt="plus">
+        </div>
     </div>
 
     <!-- 로딩 인디케이터 -->
