--- a/Game_past/Game_past.html
+++ b/Game_past/Game_past.html
@@ -25,7 +25,7 @@
             <img src="assets/character.gif" alt="" id="character">
         </div>
         <div id="block">
-            <img src="assets/fish.png" alt="blocks">
+            <img src="assets/block.png" alt="blocks">
         </div>
         <div id="death1">
             <img src="assets/death1.png" alt="death1">
@@ -60,7 +60,7 @@
     <!-- 로딩 인디케이터 -->
     <div id="loadingIndicator" style="display: none;">
         <div class="loader"></div>
-        <p>Loading...</p>
+        <img class="loading"src="assets/loading.gif">
     </div>
     <!-- 
     <div>Teachable Machine Pose Model</div>
