--- a/Main/Main.html
+++ b/Main/Main.html
@@ -31,7 +31,8 @@
     display: none;
     position: absolute;
     left: calc(30% - 120px);
-    transform: translateX(-50%);
+    transform: translateX(-80%);
+    margin-top: 56px;
   }
 
   .content p {
