--- a/Event/teachable_machine_pose/index.html
+++ b/Event/teachable_machine_pose/index.html
@@ -51,32 +51,70 @@
             <div class="container">
                 <div id="label-container"></div>
 
-                <div class="swiper tranding-slider">
-                    <div class="swiper-wrapper">
-                        <!-- Slide-start -->
-                        <!-- <div class="swiper-slide tranding-slide">
-                                <div class="tranding-slide-img">
-                                    <img src="black2.jpg" alt="검정사진" style="max-width: 20px; max-height: 20px;">
-                                </div>
-                            </div> -->
-                        <!-- Slide-end -->
+               
                         <!-- Slide-start -->
                         <div class="swiper-slide tranding-slide">
                             <div class="tranding-slide-img">
                                 <img src="옆구리스트레칭(왼쪽).png" alt="옆구리스트레칭(왼쪽)">
                             </div>
                             <div class="prediction"></div>
-                            <!-- 예측 확률을 담을 div -->
                         </div>
                         <!-- Slide-end -->
                         <!-- Slide-start -->
-                        <!-- <div class="swiper-slide tranding-slide">
+                        <div class="swiper-slide tranding-slide">
                             <div class="tranding-slide-img">
                                 <img src="옆구리스트레칭(오른쪽).png" alt="옆구리스트레칭(오른쪽)">
                             </div>
                             <div class="prediction"></div>
-                            예측 확률을 담을 div -->
-                        <!-- </div> -->
+                        </div>
+                        <!-- Slide-end -->
+                        <!-- Slide-start -->
+                        <div class="swiper-slide tranding-slide">
+                            <div class="tranding-slide-img">
+                                <img src="목스트레칭(왼쪽).png" alt="목스트레칭(왼쪽)">
+                            </div>
+                            <div class="prediction"></div>
+                        </div>
+                        <!-- Slide-end -->
+                        <!-- Slide-start -->
+                        <div class="swiper-slide tranding-slide">
+                            <div class="tranding-slide-img">
+                                <img src="목스트레칭(오른쪽).png" alt="목스트레칭(오른쪽)">
+                            </div>
+                            <div class="prediction"></div>
+                        </div>
+                        <!-- Slide-end -->
+                        <!-- Slide-start -->
+                        <div class="swiper-slide tranding-slide">
+                            <div class="tranding-slide-img">
+                                <img src="ㄱㄴ댄스(위).png" alt="ㄱㄴ댄스(위)">
+                            </div>
+                            <div class="prediction"></div>
+                        </div>
+                        <!-- Slide-end -->
+                        <!-- Slide-start -->
+                        <div class="swiper-slide tranding-slide">
+                            <div class="tranding-slide-img">
+                                <img src="ㄱㄴ댄스(아래).png" alt="ㄱㄴ댄스(아래)">
+                            </div>
+                            <div class="prediction"></div>
+                        </div>
+                        <!-- Slide-end -->
+                        <!-- Slide-start -->
+                        <div class="swiper-slide tranding-slide">
+                            <div class="tranding-slide-img">
+                                <img src="스쿼트(위).png" alt="스쿼트(위)">
+                            </div>
+                            <div class="prediction"></div>
+                        </div>
+                        <!-- Slide-end -->
+                          <!-- Slide-start -->
+                          <div class="swiper-slide tranding-slide">
+                            <div class="tranding-slide-img">
+                                <img src="스쿼트(아래).png" alt="스쿼트(아래)">
+                            </div>
+                            <div class="prediction"></div>
+                        </div>
                         <!-- Slide-end -->
                         <div class="swiper-slide tranding-slide">
                             <div class="tranding-slide-img">
