--- a/Game_past/Game_past.html
+++ b/Game_past/Game_past.html
@@ -71,7 +71,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js"></script>
     <script type="text/javascript">
-        const URL = "https://teachablemachine.withgoogle.com/models/y-4mlqsZq/";
+        const URL = "https://teachablemachine.withgoogle.com/models/707BW4zJi/";
         let model, webcam, ctx, labelContainer, maxPredictions;
         let characterJumping = false;
 
