main으로 돌아가기

--- a/Game_past_2/Game_past_2.html
+++ b/Game_past_2/Game_past_2.html
@@ -52,6 +52,18 @@
         <div id="gameOver">
             <img src="assets/gameover.png" alt="gameover">
         </div>
+        <div id="menu">
+            <a href="../Map/Map.html">
+            <img src="assets/main.png" alt="main">
+        </a>
+        </div>
+
+        <div id="menu2">
+            <a href="../Map/Map.html">
+            <img src="assets/main.png" alt="main">
+        </a>
+        </div>
+
         <div id="plus">
             <img src="assets/plus.png" alt="plus">
         </div>
